Day3 - Radio buttons mostly working

--- a/timesheet.html
+++ b/timesheet.html
@@ -123,7 +123,7 @@
             // need to be able to call with an id to select primary and secondary
             // radio selections
             buildPrimaryCategories(1)
-            //buildSecondaryCategories(categories, 1, 0)
+            buildSecondaryCategories(1, 14)
             // set the modal data
             setModelData(arg)
             myModal.show();
